add section on numpy array slicing

--- a/Class_2.ipynb
+++ b/Class_2.ipynb
@@ -153,6 +153,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a a\n",
+      "ana ana\n"
+     ]
+    }
+   ],
+   "source": [
+    "banana = 'banana'\n",
+    "\n",
+    "print(banana[1],banana[-1])\n",
+    "\n",
+    "print(banana[1:4],banana[-3:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Slicing on NumPy Arrays\n",
+    "Arrays are the essential data structure in numerical computing. They are available to you via the numpy library. Load the library like this: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 6])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.array([2, 4, 6, 8])\n",
+    "\n",
+    "x[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[   0.    4.    8.   12.   16.   20.   24.   28.   32.   36.   40.   44.\n",
+      "   48.   52.   56.   60.   64.   68.   72.   76.   80.   84.   88.   92.\n",
+      "   96.  100.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = np.linspace(0,100,26) #start,end,items (equal steps+1)\n",
+    "\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(y[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.   4.   8.  12.  16.  20.  24.  28.  32.  36.  40.  44.  48.  52.  56.\n",
+      "  60.  64.  68.  72.  76.  80.  84.  88.  92.  96.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "z = np.arange(0,100,4, dtype=float) #start, end, stepsize (end not included)\n",
+    "print(z)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
